--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
   "homepage": "https://github.com/Pereslugoff/wikistack#readme",
   "devDependencies": {
     "nodemon": "^1.18.9"
+  },
+  "dependencies": {
+    "express": "^4.16.4",
+    "html-template-tag": "^2.0.0",
+    "morgan": "^1.9.1"
   }
 }
