--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "wikistack",
   "version": "1.0.0",
   "description": "wikistack for FSA",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon ./path/to/your/app.js"
@@ -23,6 +23,9 @@
   "dependencies": {
     "express": "^4.16.4",
     "html-template-tag": "^2.0.0",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "pg": "^7.8.0",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.42.0"
   }
 }
